@@ -4,7 +4,7 @@
       "Dan Book <dbook@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.035, CPAN::Meta::Converter version 2.150001",
+   "generated_by" : "Dist::Zilla version 5.039, CPAN::Meta::Converter version 2.150005",
    "license" : [
       "artistic_2"
    ],
@@ -13,15 +13,28 @@
       "version" : 2
    },
    "name" : "Mojo-Reactor-Epoll",
+   "no_index" : {
+      "directory" : [
+         "t",
+         "xt",
+         "inc",
+         "share",
+         "eg",
+         "examples"
+      ]
+   },
    "prereqs" : {
       "configure" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : "0"
+            "Module::Build::Tiny" : "0.034"
          }
       },
       "develop" : {
          "requires" : {
-            "Dist::Zilla::PluginBundle::Author::DBOOK" : "0.003"
+            "Dist::Zilla::PluginBundle::Author::DBOOK" : "0.016",
+            "Pod::Coverage::TrustPod" : "0",
+            "Test::Pod" : "1.41",
+            "Test::Pod::Coverage" : "1.08"
          }
       },
       "runtime" : {
@@ -60,6 +73,10 @@
          "web" : "https://github.com/Grinnz/Mojo-Reactor-Epoll"
       }
    },
-   "version" : "0.006"
+   "version" : "0.006",
+   "x_contributors" : [
+      "Dan Book <grinnz@gmail.com>",
+      "Dan Book <grinnz@grinnz.com>"
+   ]
 }
 
