@@ -1,61 +1,0 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.035.
-use strict;
-use warnings;
-
-use 5.010001;
-
-use ExtUtils::MakeMaker;
-
-my %WriteMakefileArgs = (
-  "ABSTRACT" => "epoll backend for Mojo::Reactor",
-  "AUTHOR" => "Dan Book <dbook\@cpan.org>",
-  "CONFIGURE_REQUIRES" => {
-    "ExtUtils::MakeMaker" => 0
-  },
-  "DISTNAME" => "Mojo-Reactor-Epoll",
-  "EXE_FILES" => [],
-  "LICENSE" => "artistic_2",
-  "MIN_PERL_VERSION" => "5.010001",
-  "NAME" => "Mojo::Reactor::Epoll",
-  "PREREQ_PM" => {
-    "Carp" => 0,
-    "IO::Epoll" => "0.03",
-    "List::Util" => 0,
-    "Mojolicious" => "5.70",
-    "POSIX" => 0,
-    "Time::HiRes" => 0
-  },
-  "TEST_REQUIRES" => {
-    "IO::Socket::INET" => 0,
-    "Test::More" => "0.88"
-  },
-  "VERSION" => "0.006",
-  "test" => {
-    "TESTS" => "t/*.t"
-  }
-);
-
-
-my %FallbackPrereqs = (
-  "Carp" => 0,
-  "ExtUtils::MakeMaker" => 0,
-  "IO::Epoll" => "0.03",
-  "IO::Socket::INET" => 0,
-  "List::Util" => 0,
-  "Mojolicious" => "5.70",
-  "POSIX" => 0,
-  "Test::More" => "0.88",
-  "Time::HiRes" => 0
-);
-
-
-unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
-  delete $WriteMakefileArgs{TEST_REQUIRES};
-  delete $WriteMakefileArgs{BUILD_REQUIRES};
-  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
-}
-
-delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
-  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
-
-WriteMakefile(%WriteMakefileArgs);
