@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Switch installer to Module::Build::Tiny
 
 0.005     2015-04-27 18:44:15 EDT
   - Support sequential next_tick
